--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,5 @@
 ﻿2.0.0 Initial commit
 3.0.0 Migration to .NET 5.0 (dual targeting .NET 5.0 and .Net Framework 4.6.1)
 3.0.1 Fixed use of single quotes in img src
+3.1.0 Migrated to .NET 6.0
+3.2.0 Added image comparison (method SimilarityTo)
